notal_to_cfg_generator/src/backend/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    RW_CLOSE
    RW_JUDUL
    RW_MODUL
    RW_OPEN
    RW_READ
    RW_REWRITE
    RW_SEQFILE
    S_CONCATENATION
    S_DOUBLE_QUOTE
    S_LEFT_CURLY_BRACKET
    S_RIGHT_CURLY_BRACKET
    S_SINGLE_QUOTE
    WHITESPACE

Grammar

Rule 0     S' -> file
Rule 1     file -> program
Rule 2     program -> RW_PROGRAM identifier block
Rule 3     identifier_list -> identifier_list S_COMMA identifier
Rule 4     identifier_list -> identifier
Rule 5     block -> RW_KAMUS INDENT constant_declaration_block type_declaration_block variable_declaration_block procedure_and_function_declaration_block algorithm_block procedure_and_function_implementation_block
Rule 6     block -> RW_KAMUS algorithm_block procedure_and_function_implementation_block
Rule 7     constant_declaration_block -> empty
Rule 8     constant_declaration_block -> constant_declaration
Rule 9     type_declaration_block -> empty
Rule 10    type_declaration_block -> type_declaration
Rule 11    variable_declaration_block -> empty
Rule 12    variable_declaration_block -> variable_declaration
Rule 13    procedure_and_function_declaration_block -> DEDENT
Rule 14    procedure_and_function_declaration_block -> procedure_and_function_declaration DEDENT
Rule 15    algorithm_block -> RW_ALGORITMA statement_part
Rule 16    procedure_and_function_implementation_block -> empty
Rule 17    procedure_and_function_implementation_block -> subprogram_implementation_list
Rule 18    subprogram_implementation_list -> subprogram_implementation_list subprogram_implementation
Rule 19    subprogram_implementation_list -> subprogram_implementation
Rule 20    subprogram_implementation -> procedure_implementation
Rule 21    subprogram_implementation -> function_implementation
Rule 22    procedure_implementation -> procedure_declaration procedure_implementation_block
Rule 23    procedure_implementation_block -> RW_KAMUS RW_LOKAL INDENT constant_declaration_block type_declaration_block variable_declaration_block DEDENT algorithm_block
Rule 24    procedure_implementation_block -> RW_KAMUS RW_LOKAL algorithm_block
Rule 25    function_implementation -> function_declaration function_implementation_block
Rule 26    function_implementation_block -> RW_KAMUS RW_LOKAL INDENT constant_declaration_block type_declaration_block variable_declaration_block DEDENT algorithm_block
Rule 27    function_implementation_block -> RW_KAMUS RW_LOKAL algorithm_block
Rule 28    type_denoter -> ordinal_type
Rule 29    type_denoter -> structured_type
Rule 30    type_denoter -> RW_INTEGER
Rule 31    type_denoter -> RW_REAL
Rule 32    type_denoter -> RW_STRING
Rule 33    type_denoter -> RW_CHARACTER
Rule 34    type_denoter -> RW_BOOLEAN
Rule 35    ordinal_type -> enumerated_type
Rule 36    ordinal_type -> subrange_type
Rule 37    ordinal_type -> identifier
Rule 38    enumerated_type -> S_LEFT_BRACKET identifier_list S_RIGHT_BRACKET
Rule 39    subrange_type -> subrange_type_option
Rule 40    subrange_type_option -> subrange_option S_UP_TO subrange_option
Rule 41    subrange_option -> identifier
Rule 42    subrange_option -> constant
Rule 43    subrange_option -> function_designator
Rule 44    structured_type -> array_type
Rule 45    array_type -> RW_ARRAY array_index RW_OF component_type
Rule 46    array_index -> S_LEFT_SQUARE_BRACKET index_list S_RIGHT_SQUARE_BRACKET
Rule 47    index_list -> index_list S_COMMA index_type
Rule 48    index_list -> index_type
Rule 49    index_type -> ordinal_type
Rule 50    component_type -> type_denoter
Rule 51    variable_declaration -> variable_declaration variable_sub_declaration
Rule 52    variable_declaration -> variable_sub_declaration
Rule 53    variable_sub_declaration -> identifier_list S_COLON type_denoter
Rule 54    variable_declaration_comma -> variable_sub_declaration
Rule 55    variable_declaration_comma -> variable_sub_declaration S_COMMA variable_declaration_comma
Rule 56    constant_declaration -> constant_declaration constant_sub_declaration
Rule 57    constant_declaration -> constant_sub_declaration
Rule 58    constant_sub_declaration -> RW_CONSTANT identifier S_COLON type_denoter S_EQUAL constant
Rule 59    type_declaration -> type_declaration type_sub_declaration
Rule 60    type_declaration -> type_sub_declaration
Rule 61    type_sub_declaration -> RW_TYPE identifier S_COLON type_variety
Rule 62    type_variety -> type_denoter
Rule 63    type_variety -> type_user_defined
Rule 64    type_user_defined -> S_LESS_THAN variable_declaration_comma S_GREATER_THAN
Rule 65    procedure_and_function_declaration -> procedure_and_function_declaration procedure_and_function_sub_declaration
Rule 66    procedure_and_function_declaration -> procedure_and_function_sub_declaration
Rule 67    procedure_and_function_sub_declaration -> procedure_declaration
Rule 68    procedure_and_function_sub_declaration -> function_declaration
Rule 69    procedure_declaration -> procedure_identifier formal_parameter_list
Rule 70    procedure_identifier -> RW_PROCEDURE identifier
Rule 71    formal_parameter_list -> S_LEFT_BRACKET formal_parameter_section_list S_RIGHT_BRACKET
Rule 72    formal_parameter_section_list -> empty
Rule 73    formal_parameter_section_list -> formal_parameter_section
Rule 74    formal_parameter_section -> formal_parameter_section S_SEMI_COLON parameter_specification
Rule 75    formal_parameter_section -> parameter_specification
Rule 76    parameter_specification -> procedure_parameter_type variable_sub_declaration
Rule 77    procedure_parameter_type -> RW_INPUT
Rule 78    procedure_parameter_type -> RW_OUTPUT
Rule 79    procedure_parameter_type -> RW_INPUT S_DIVIDE RW_OUTPUT
Rule 80    function_declaration -> function_identification function_formal_parameter_list function_return_type
Rule 81    function_declaration -> function_identification function_return_type
Rule 82    function_identification -> RW_FUNCTION identifier
Rule 83    function_return_type -> S_RETURN type_denoter
Rule 84    function_formal_parameter_list -> S_LEFT_BRACKET function_parameter_list_option S_RIGHT_BRACKET
Rule 85    function_actual_parameter_list -> S_LEFT_BRACKET actual_parameter_list S_RIGHT_BRACKET
Rule 86    function_parameter_list_option -> function_parameter_list
Rule 87    function_parameter_list_option -> empty
Rule 88    function_parameter_list -> function_parameter_list S_SEMI_COLON function_parameter_declaration
Rule 89    function_parameter_list -> function_parameter_declaration
Rule 90    function_parameter_declaration -> variable_sub_declaration
Rule 91    statement_part -> compound_statement
Rule 92    compound_statement -> INDENT statement_sequence DEDENT
Rule 93    statement_sequence -> statement_sequence S_SEMI_COLON statement
Rule 94    statement_sequence -> statement_sequence statement
Rule 95    statement_sequence -> statement
Rule 96    statement -> assignment_statement
Rule 97    statement -> procedure_statement
Rule 98    statement -> function_returned_statement
Rule 99    statement -> if_statement
Rule 100   statement -> depend_on_statement
Rule 101   statement -> while_statement
Rule 102   statement -> traversal_statement
Rule 103   statement -> repeat_statement
Rule 104   statement -> iterate_stop_statement
Rule 105   assignment_statement -> variable_access S_ASSIGNMENT expression
Rule 106   procedure_statement -> input_output_procedure_statement
Rule 107   procedure_statement -> identifier S_LEFT_BRACKET actual_parameter_list S_RIGHT_BRACKET
Rule 108   procedure_statement -> identifier
Rule 109   actual_parameter_list -> actual_parameter_list S_COMMA actual_parameter
Rule 110   actual_parameter_list -> actual_parameter
Rule 111   actual_parameter -> expression
Rule 112   input_output_procedure_statement -> input_statement
Rule 113   input_output_procedure_statement -> output_statement
Rule 114   input_statement -> RW_INPUT S_LEFT_BRACKET input_statement_parameter_list S_RIGHT_BRACKET
Rule 115   input_statement_parameter_list -> input_statement_parameter_list S_COMMA input_statement_parameter
Rule 116   input_statement_parameter_list -> input_statement_parameter
Rule 117   input_statement_parameter -> variable_access
Rule 118   output_statement -> RW_OUTPUT S_LEFT_BRACKET output_statement_parameter_list S_RIGHT_BRACKET
Rule 119   output_statement_parameter_list -> output_statement_parameter_list S_COMMA output_statement_parameter
Rule 120   output_statement_parameter_list -> output_statement_parameter
Rule 121   output_statement_parameter -> expression
Rule 122   function_returned_statement -> S_RETURN expression
Rule 123   depend_on_statement -> RW_DEPEND RW_ON S_LEFT_BRACKET input_statement_parameter_list S_RIGHT_BRACKET INDENT depend_on_action_list DEDENT
Rule 124   depend_on_action_list -> depend_on_action_list depend_on_action
Rule 125   depend_on_action_list -> depend_on_action
Rule 126   depend_on_action -> expression S_COLON INDENT statement_sequence DEDENT
Rule 127   if_statement -> RW_IF boolean_expression RW_THEN compound_statement
Rule 128   if_statement -> RW_IF boolean_expression RW_THEN compound_statement RW_ELSE compound_statement
Rule 129   boolean_expression -> expression
Rule 130   repeat_statement -> repeat_until_statement
Rule 131   repeat_statement -> repeat_times_statement
Rule 132   repeat_until_statement -> RW_REPEAT compound_statement RW_UNTIL boolean_expression
Rule 133   repeat_times_statement -> RW_REPEAT variable_access RW_TIMES compound_statement
Rule 134   repeat_times_statement -> RW_REPEAT integer_constant RW_TIMES compound_statement
Rule 135   repeat_times_statement -> RW_REPEAT function_designator RW_TIMES compound_statement
Rule 136   while_statement -> RW_WHILE boolean_expression RW_DO compound_statement
Rule 137   iterate_stop_statement -> RW_ITERATE compound_statement RW_STOP boolean_expression compound_statement
Rule 138   traversal_statement -> control_variable RW_TRAVERSAL traversal_range_value compound_statement
Rule 139   traversal_range_value -> S_LEFT_SQUARE_BRACKET subrange_type S_RIGHT_SQUARE_BRACKET
Rule 140   control_variable -> identifier
Rule 141   unsigned_constant -> non_string_constant
Rule 142   unsigned_constant -> string_char_constant
Rule 143   unsigned_constant -> boolean_constant
Rule 144   unsigned_constant -> nil_constant
Rule 145   constant -> string_char_constant
Rule 146   constant -> non_string_constant
Rule 147   constant -> sign non_string_constant
Rule 148   constant -> boolean_constant
Rule 149   constant -> nil_constant
Rule 150   sign -> S_PLUS
Rule 151   sign -> S_MINUS
Rule 152   boolean_constant -> L_BOOLEAN_TRUE
Rule 153   boolean_constant -> L_BOOLEAN_FALSE
Rule 154   non_string_constant -> integer_constant
Rule 155   non_string_constant -> real_constant
Rule 156   integer_constant -> L_INTEGER_NUMBER
Rule 157   real_constant -> L_REAL_NUMBER
Rule 158   string_char_constant -> string_constant
Rule 159   string_char_constant -> char_constant
Rule 160   string_constant -> L_STRING
Rule 161   char_constant -> L_CHARACTER
Rule 162   nil_constant -> L_NIL
Rule 163   variable_access -> identifier
Rule 164   variable_access -> indexed_variable
Rule 165   variable_access -> field_designator
Rule 166   indexed_variable -> variable_access S_LEFT_SQUARE_BRACKET index_expression_list S_RIGHT_SQUARE_BRACKET
Rule 167   index_expression_list -> index_expression_list S_COMMA expression
Rule 168   index_expression_list -> expression
Rule 169   field_designator -> variable_access S_DOT identifier
Rule 170   expression -> expression relational_op additive_expression
Rule 171   expression -> additive_expression
Rule 172   relational_op -> S_EQUAL
Rule 173   relational_op -> S_NOT_EQUAL
Rule 174   relational_op -> S_LESS_THAN_EQUAL
Rule 175   relational_op -> S_GREATER_THAN_EQUAL
Rule 176   relational_op -> S_LESS_THAN
Rule 177   relational_op -> S_GREATER_THAN
Rule 178   relational_op -> S_ELEMENT_OF
Rule 179   relational_op -> RW_EQ
Rule 180   relational_op -> RW_NEQ
Rule 181   additive_expression -> additive_expression additive_op multiplicative_expression
Rule 182   additive_expression -> multiplicative_expression
Rule 183   additive_op -> S_PLUS
Rule 184   additive_op -> S_MINUS
Rule 185   additive_op -> RW_OR
Rule 186   additive_op -> RW_XOR
Rule 187   multiplicative_expression -> multiplicative_expression multiplicative_op unary_expression
Rule 188   multiplicative_expression -> unary_expression
Rule 189   multiplicative_op -> S_TIMES
Rule 190   multiplicative_op -> S_DIVIDE
Rule 191   multiplicative_op -> RW_DIV
Rule 192   multiplicative_op -> RW_MOD
Rule 193   multiplicative_op -> RW_AND
Rule 194   unary_expression -> unary_op unary_expression
Rule 195   unary_expression -> exponentiation_expression
Rule 196   exponentiation_expression -> primary_expression
Rule 197   exponentiation_expression -> primary_expression S_POWER exponentiation_expression
Rule 198   unary_op -> S_PLUS
Rule 199   unary_op -> S_MINUS
Rule 200   unary_op -> RW_NOT
Rule 201   primary_expression -> variable_access
Rule 202   primary_expression -> unsigned_constant
Rule 203   primary_expression -> S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 204   primary_expression -> set_constructor
Rule 205   primary_expression -> function_designator
Rule 206   set_constructor -> S_LEFT_SQUARE_BRACKET member_designator_list S_RIGHT_SQUARE_BRACKET
Rule 207   set_constructor -> S_LEFT_SQUARE_BRACKET S_RIGHT_SQUARE_BRACKET
Rule 208   member_designator_list -> member_designator_list S_COMMA member_designator
Rule 209   member_designator_list -> member_designator
Rule 210   member_designator -> member_designator S_UP_TO expression
Rule 211   member_designator -> expression
Rule 212   function_designator -> user_defined_function_call
Rule 213   function_designator -> math_function_call
Rule 214   function_designator -> string_function_call
Rule 215   function_designator -> converter_function_call
Rule 216   function_designator -> list_function_call
Rule 217   user_defined_function_call -> identifier function_actual_parameter_list
Rule 218   math_function_call -> abs_function
Rule 219   math_function_call -> sin_function
Rule 220   math_function_call -> cos_function
Rule 221   math_function_call -> tan_function
Rule 222   math_function_call -> succ_function
Rule 223   math_function_call -> pred_function
Rule 224   abs_function -> RW_ABS S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 225   sin_function -> RW_SIN S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 226   cos_function -> RW_COS S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 227   tan_function -> RW_TAN S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 228   succ_function -> RW_SUCC S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 229   pred_function -> RW_PRED S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 230   string_function_call -> awal_function
Rule 231   string_function_call -> akhir_function
Rule 232   string_function_call -> firstchar_function
Rule 233   string_function_call -> lastchar_function
Rule 234   string_function_call -> long_function
Rule 235   string_function_call -> iskosong_function
Rule 236   awal_function -> RW_AWAL S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 237   akhir_function -> RW_AKHIR S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 238   firstchar_function -> RW_FIRSTCHAR S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 239   lastchar_function -> RW_LASTCHAR S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 240   long_function -> RW_LONG S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 241   iskosong_function -> RW_ISKOSONG S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 242   converter_function_call -> integer_to_real
Rule 243   converter_function_call -> real_to_integer
Rule 244   integer_to_real -> RW_INTEGERTOREAL S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 245   real_to_integer -> RW_REALTOINTEGER S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 246   list_function_call -> info_function
Rule 247   info_function -> RW_INFO S_LEFT_BRACKET expression S_RIGHT_BRACKET
Rule 248   empty -> <empty>
Rule 249   identifier -> IDENTIFIER

Terminals, with rules where they appear

COMMENT              : 
DEDENT               : 13 14 23 26 92 123 126
IDENTIFIER           : 249
INDENT               : 5 23 26 92 123 126
L_BOOLEAN_FALSE      : 153
L_BOOLEAN_TRUE       : 152
L_CHARACTER          : 161
L_INTEGER_NUMBER     : 156
L_NIL                : 162
L_REAL_NUMBER        : 157
L_STRING             : 160
RW_ABS               : 224
RW_AKHIR             : 237
RW_ALGORITMA         : 15
RW_AND               : 193
RW_ARRAY             : 45
RW_AWAL              : 236
RW_BOOLEAN           : 34
RW_CHARACTER         : 33
RW_CLOSE             : 
RW_CONSTANT          : 58
RW_COS               : 226
RW_DEPEND            : 123
RW_DIV               : 191
RW_DO                : 136
RW_ELSE              : 128
RW_EQ                : 179
RW_FIRSTCHAR         : 238
RW_FUNCTION          : 82
RW_IF                : 127 128
RW_INFO              : 247
RW_INPUT             : 77 79 114
RW_INTEGER           : 30
RW_INTEGERTOREAL     : 244
RW_ISKOSONG          : 241
RW_ITERATE           : 137
RW_JUDUL             : 
RW_KAMUS             : 5 6 23 24 26 27
RW_LASTCHAR          : 239
RW_LOKAL             : 23 24 26 27
RW_LONG              : 240
RW_MOD               : 192
RW_MODUL             : 
RW_NEQ               : 180
RW_NOT               : 200
RW_OF                : 45
RW_ON                : 123
RW_OPEN              : 
RW_OR                : 185
RW_OUTPUT            : 78 79 118
RW_PRED              : 229
RW_PROCEDURE         : 70
RW_PROGRAM           : 2
RW_READ              : 
RW_REAL              : 31
RW_REALTOINTEGER     : 245
RW_REPEAT            : 132 133 134 135
RW_REWRITE           : 
RW_SEQFILE           : 
RW_SIN               : 225
RW_STOP              : 137
RW_STRING            : 32
RW_SUCC              : 228
RW_TAN               : 227
RW_THEN              : 127 128
RW_TIMES             : 133 134 135
RW_TRAVERSAL         : 138
RW_TYPE              : 61
RW_UNTIL             : 132
RW_WHILE             : 136
RW_XOR               : 186
S_ASSIGNMENT         : 105
S_COLON              : 53 58 61 126
S_COMMA              : 3 47 55 109 115 119 167 208
S_CONCATENATION      : 
S_DIVIDE             : 79 190
S_DOT                : 169
S_DOUBLE_QUOTE       : 
S_ELEMENT_OF         : 178
S_EQUAL              : 58 172
S_GREATER_THAN       : 64 177
S_GREATER_THAN_EQUAL : 175
S_LEFT_BRACKET       : 38 71 84 85 107 114 118 123 203 224 225 226 227 228 229 236 237 238 239 240 241 244 245 247
S_LEFT_CURLY_BRACKET : 
S_LEFT_SQUARE_BRACKET : 46 139 166 206 207
S_LESS_THAN          : 64 176
S_LESS_THAN_EQUAL    : 174
S_MINUS              : 151 184 199
S_NOT_EQUAL          : 173
S_PLUS               : 150 183 198
S_POWER              : 197
S_RETURN             : 83 122
S_RIGHT_BRACKET      : 38 71 84 85 107 114 118 123 203 224 225 226 227 228 229 236 237 238 239 240 241 244 245 247
S_RIGHT_CURLY_BRACKET : 
S_RIGHT_SQUARE_BRACKET : 46 139 166 206 207
S_SEMI_COLON         : 74 88 93
S_SINGLE_QUOTE       : 
S_TIMES              : 189
S_UP_TO              : 40 210
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

abs_function         : 218
actual_parameter     : 109 110
actual_parameter_list : 85 107 109
additive_expression  : 170 171 181
additive_op          : 181
akhir_function       : 231
algorithm_block      : 5 6 23 24 26 27
array_index          : 45
array_type           : 44
assignment_statement : 96
awal_function        : 230
block                : 2
boolean_constant     : 143 148
boolean_expression   : 127 128 132 136 137
char_constant        : 159
component_type       : 45
compound_statement   : 91 127 128 128 132 133 134 135 136 137 137 138
constant             : 42 58
constant_declaration : 8 56
constant_declaration_block : 5 23 26
constant_sub_declaration : 56 57
control_variable     : 138
converter_function_call : 215
cos_function         : 220
depend_on_action     : 124 125
depend_on_action_list : 123 124
depend_on_statement  : 100
empty                : 7 9 11 16 72 87
enumerated_type      : 35
exponentiation_expression : 195 197
expression           : 105 111 121 122 126 129 167 168 170 203 210 211 224 225 226 227 228 229 236 237 238 239 240 241 244 245 247
field_designator     : 165
file                 : 0
firstchar_function   : 232
formal_parameter_list : 69
formal_parameter_section : 73 74
formal_parameter_section_list : 71
function_actual_parameter_list : 217
function_declaration : 25 68
function_designator  : 43 135 205
function_formal_parameter_list : 80
function_identification : 80 81
function_implementation : 21
function_implementation_block : 25
function_parameter_declaration : 88 89
function_parameter_list : 86 88
function_parameter_list_option : 84
function_return_type : 80 81
function_returned_statement : 98
identifier           : 2 3 4 37 41 58 61 70 82 107 108 140 163 169 217
identifier_list      : 3 38 53
if_statement         : 99
index_expression_list : 166 167
index_list           : 46 47
index_type           : 47 48
indexed_variable     : 164
info_function        : 246
input_output_procedure_statement : 106
input_statement      : 112
input_statement_parameter : 115 116
input_statement_parameter_list : 114 115 123
integer_constant     : 134 154
integer_to_real      : 242
iskosong_function    : 235
iterate_stop_statement : 104
lastchar_function    : 233
list_function_call   : 216
long_function        : 234
math_function_call   : 213
member_designator    : 208 209 210
member_designator_list : 206 208
multiplicative_expression : 181 182 187
multiplicative_op    : 187
nil_constant         : 144 149
non_string_constant  : 141 146 147
ordinal_type         : 28 49
output_statement     : 113
output_statement_parameter : 119 120
output_statement_parameter_list : 118 119
parameter_specification : 74 75
pred_function        : 223
primary_expression   : 196 197
procedure_and_function_declaration : 14 65
procedure_and_function_declaration_block : 5
procedure_and_function_implementation_block : 5 6
procedure_and_function_sub_declaration : 65 66
procedure_declaration : 22 67
procedure_identifier : 69
procedure_implementation : 20
procedure_implementation_block : 22
procedure_parameter_type : 76
procedure_statement  : 97
program              : 1
real_constant        : 155
real_to_integer      : 243
relational_op        : 170
repeat_statement     : 103
repeat_times_statement : 131
repeat_until_statement : 130
set_constructor      : 204
sign                 : 147
sin_function         : 219
statement            : 93 94 95
statement_part       : 15
statement_sequence   : 92 93 94 126
string_char_constant : 142 145
string_constant      : 158
string_function_call : 214
structured_type      : 29
subprogram_implementation : 18 19
subprogram_implementation_list : 17 18
subrange_option      : 40 40
subrange_type        : 36 139
subrange_type_option : 39
succ_function        : 222
tan_function         : 221
traversal_range_value : 138
traversal_statement  : 102
type_declaration     : 10 59
type_declaration_block : 5 23 26
type_denoter         : 50 53 58 62 83
type_sub_declaration : 59 60
type_user_defined    : 63
type_variety         : 61
unary_expression     : 187 188 194
unary_op             : 194
unsigned_constant    : 202
user_defined_function_call : 212
variable_access      : 105 117 133 166 169 201
variable_declaration : 12 51
variable_declaration_block : 5 23 26
variable_declaration_comma : 55 64
variable_sub_declaration : 51 52 54 55 76 90
while_statement      : 101

Parsing method: LALR

state 0

    (0) S' -> . file
    (1) file -> . program
    (2) program -> . RW_PROGRAM identifier block

    RW_PROGRAM      shift and go to state 3

    file                           shift and go to state 1
    program                        shift and go to state 2

state 1

    (0) S' -> file .



state 2

    (1) file -> program .

    $end            reduce using rule 1 (file -> program .)


state 3

    (2) program -> RW_PROGRAM . identifier block
    (249) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 5

    identifier                     shift and go to state 4

state 4

    (2) program -> RW_PROGRAM identifier . block
    (5) block -> . RW_KAMUS INDENT constant_declaration_block type_declaration_block variable_declaration_block procedure_and_function_declaration_block algorithm_block procedure_and_function_implementation_block
    (6) block -> . RW_KAMUS algorithm_block procedure_and_function_implementation_block

    RW_KAMUS        shift and go to state 7

    block                          shift and go to state 6

state 5

    (249) identifier -> IDENTIFIER .

    RW_KAMUS        reduce using rule 249 (identifier -> IDENTIFIER .)
    S_COLON         reduce using rule 249 (identifier -> IDENTIFIER .)
    S_LEFT_BRACKET  reduce using rule 249 (identifier -> IDENTIFIER .)
    S_RETURN        reduce using rule 249 (identifier -> IDENTIFIER .)
    DEDENT          reduce using rule 249 (identifier -> IDENTIFIER .)
    S_SEMI_COLON    reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_IF           reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_DEPEND       reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_WHILE        reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_ITERATE      reduce using rule 249 (identifier -> IDENTIFIER .)
    IDENTIFIER      reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_REPEAT       reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_INPUT        reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_OUTPUT       reduce using rule 249 (identifier -> IDENTIFIER .)
    S_ASSIGNMENT    reduce using rule 249 (identifier -> IDENTIFIER .)
    S_LEFT_SQUARE_BRACKET reduce using rule 249 (identifier -> IDENTIFIER .)
    S_DOT           reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_TRAVERSAL    reduce using rule 249 (identifier -> IDENTIFIER .)
    S_COMMA         reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_PROCEDURE    reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_FUNCTION     reduce using rule 249 (identifier -> IDENTIFIER .)
    S_UP_TO         reduce using rule 249 (identifier -> IDENTIFIER .)
    S_POWER         reduce using rule 249 (identifier -> IDENTIFIER .)
    S_TIMES         reduce using rule 249 (identifier -> IDENTIFIER .)
    S_DIVIDE        reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_DIV          reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_MOD          reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_AND          reduce using rule 249 (identifier -> IDENTIFIER .)
    S_PLUS          reduce using rule 249 (identifier -> IDENTIFIER .)
    S_MINUS         reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_OR           reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_XOR          reduce using rule 249 (identifier -> IDENTIFIER .)
    S_EQUAL         reduce using rule 249 (identifier -> IDENTIFIER .)
    S_NOT_EQUAL     reduce using rule 249 (identifier -> IDENTIFIER .)
    S_LESS_THAN_EQUAL reduce using rule 249 (identifier -> IDENTIFIER .)
    S_GREATER_THAN_EQUAL reduce using rule 249 (identifier -> IDENTIFIER .)
    S_LESS_THAN     reduce using rule 249 (identifier -> IDENTIFIER .)
    S_GREATER_THAN  reduce using rule 249 (identifier -> IDENTIFIER .)
    S_ELEMENT_OF    reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_EQ           reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_NEQ          reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_THEN         reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_DO           reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_TIMES        reduce using rule 249 (identifier -> IDENTIFIER .)
    S_RIGHT_BRACKET reduce using rule 249 (identifier -> IDENTIFIER .)
    S_RIGHT_SQUARE_BRACKET reduce using rule 249 (identifier -> IDENTIFIER .)
    INDENT          reduce using rule 249 (identifier -> IDENTIFIER .)
    RW_TYPE         reduce using rule 249 (identifier -> IDENTIFIER .)


state 6

    (2) program -> RW_PROGRAM identifier block .

    $end            reduce using rule 2 (program -> RW_PROGRAM identifier block .)


state 7

    (5) block -> RW_KAMUS . INDENT constant_declaration_block type_declaration_block variable_declaration_block procedure_and_function_declaration_block algorithm_block procedure_and_function_implementation_block
    (6) block -> RW_KAMUS . algorithm_block procedure_and_function_implementation_block
    (15) algorithm_block -> . RW_ALGORITMA statement_part

    INDENT          shift and go to state 8
    RW_ALGORITMA    shift and go to state 10

    algorithm_block                shift and go to state 9

state 8

    (5) block -> RW_KAMUS INDENT . constant_declaration_block type_declaration_block variable_declaration_block procedure_and_function_declaration_block algorithm_block procedure_and_function_implementation_block
    (7) constant_declaration_block -> . empty
    (8) constant_declaration_block -> . constant_declaration
    (248) empty -> .
    (56) constant_declaration -> . constant_declaration constant_sub_declaration
    (57) constant_declaration -> . constant_sub_declaration
    (58) constant_sub_declaration -> . RW_CONSTANT identifier S_COLON type_denoter S_EQUAL constant

    RW_TYPE         reduce using rule 248 (empty -> .)
    IDENTIFIER      reduce using rule 248 (empty -> .)
    DEDENT          reduce using rule 248 (empty -> .)
    RW_PROCEDURE    reduce using rule 248 (empty -> .)
    RW_FUNCTION     reduce using rule 248 (empty -> .)
    RW_CONSTANT     shift and go to state 15

    constant_declaration_block     shift and go to state 11
    empty                          shift and go to state 12
    constant_declaration           shift and go to state 13
    constant_sub_declaration       shift and go to state 14

state 9

    (6) block -> RW_KAMUS algorithm_block . procedure_and_function_implementation_block
    (16) procedure_and_function_implementation_block -> . empty
    (17) procedure_and_function_implementation_block -> . subprogram_implementation_list
    (248) empty -> .
    (18) subprogram_implementation_list -> . subprogram_implementation_list subprogram_implementation
    (19) subprogram_implementation_list -> . subprogram_implementation
    (20) subprogram_implementation -> . procedure_implementation
    (21) subprogram_implementation -> . function_implementation
    (22) procedure_implementation -> . procedure_declaration procedure_implementation_block
    (25) function_implementation -> . function_declaration function_implementation_block
    (69) procedure_declaration -> . procedure_identifier formal_parameter_list
    (80) function_declaration -> . function_identification function_formal_parameter_list function_return_type
    (81) function_declaration -> . function_identification function_return_type
    (70) procedure_identifier -> . RW_PROCEDURE identifier
    (82) function_identification -> . RW_FUNCTION identifier

    $end            reduce using rule 248 (empty -> .)
    RW_PROCEDURE    shift and go to state 26
    RW_FUNCTION     shift and go to state 27

    procedure_and_function_implementation_block shift and go to state 16
    empty                          shift and go to state 17
    subprogram_implementation_list shift and go to state 18
    subprogram_implementation      shift and go to state 19
    procedure_implementation       shift and go to state 20
    function_implementation        shift and go to state 21
    procedure_declaration          shift and go to state 22
    function_declaration           shift and go to state 23
    procedure_identifier           shift and go to state 24
    function_identification        shift and go to state 25

state 10

    (15) algorithm_block -> RW_ALGORITMA . statement_part
    (91) statement_part -> . compound_statement
    (92) compound_statement -> . INDENT statement_sequence DEDENT

    INDENT          shift and go to state 30

    statement_part                 shift and go to state 28
    compound_statement             shift and go to state 29

state 11

    (5) block -> RW_KAMUS INDENT constant_declaration_block . type_declaration_block variable_declaration_block procedure_and_function_declaration_block algorithm_block procedure_and_function_implementation_block
    (9) type_declaration_block -> . empty
    (10) type_declaration_block -> . type_declaration
    (248) empty -> .
    (59) type_declaration -> . type_declaration type_sub_declaration
    (60) type_declaration -> . type_sub_declaration
    (61) type_sub_declaration -> . RW_TYPE identifier S_COLON type_variety

    IDENTIFIER      reduce using rule 248 (empty -> .)
    DEDENT          reduce using rule 248 (empty -> .)
    RW_PROCEDURE    reduce using rule 248 (empty -> .)
    RW_FUNCTION     reduce using rule 248 (empty -> .)
    RW_TYPE         shift and go to state 35

    type_declaration_block         shift and go to state 31
    empty                          shift and go to state 32
    type_declaration               shift and go to state 33
    type_sub_declaration           shift and go to state 34

state 12

    (7) constant_declaration_block -> empty .
